--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
     "jquery": "^3.3.1",
+    "mapbox-gl": "^0.52.0-beta.1",
     "tippy.js": "^3.3.0"
   },
   "devDependencies": {
